appId: swmansion.enriched.example
tags:
  - accessibility
---
- launchApp

- tapOn:
    id: "toggle-screen-button"

- runFlow:
    file: "../subflows/capture_or_assert_screenshot.yaml"
    env:
        SCREENSHOT_NAME: "font_scaling__placeholder"

- tapOn:
    id: "editor-input"

- inputText: "Plain "

- tapOn:
    id: "toolbar-bold"
- inputText: "bold"
- tapOn:
    id: "toolbar-bold"
- inputText: " "

- tapOn:
    id: "toolbar-italic"
- inputText: "italic"
- tapOn:
    id: "toolbar-italic"
- inputText: " "

- tapOn:
    id: "toolbar-underline"
- inputText: "underline"
- tapOn:
    id: "toolbar-underline"
- inputText: " "

- tapOn:
    id: "toolbar-strikethrough"
- inputText: "strike-through"
- tapOn:
    id: "toolbar-strikethrough"
- inputText: " "

- tapOn:
    id: "toolbar-inline-code"
- inputText: "code"
- tapOn:
    id: "toolbar-inline-code"

- runFlow:
    file: "../subflows/capture_or_assert_screenshot.yaml"
    env:
        SCREENSHOT_NAME: "font_scaling"
