appId: swmansion.enriched.example
---
- launchApp

- tapOn:
    id: "toggle-screen-button"

- tapOn:
    id: "editor-input"

- inputText: "plain "

- tapOn:
    id: "toolbar-bold"
- inputText: "bold"
- tapOn:
    id: "toolbar-bold"
- inputText: " "

- tapOn:
    id: "toolbar-italic"
- inputText: "italic"
- tapOn:
    id: "toolbar-italic"
- inputText: " "

- tapOn:
    id: "toolbar-underline"
- inputText: "underline"
- tapOn:
    id: "toolbar-underline"
- inputText: " "

- tapOn:
    id: "toolbar-strikethrough"
- inputText: "strike-through"
- tapOn:
    id: "toolbar-strikethrough"
- inputText: " "

- tapOn:
    id: "toolbar-inline-code"
- inputText: "code"
- tapOn:
    id: "toolbar-inline-code"

- runFlow:
    file: "../subflows/capture_or_assert_screenshot.yaml"
    env:
        SCREENSHOT_NAME: "inline_styles"
